force-app/main/default/objects/User/fields/Eligible_for_Full_Application__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Full_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community user is eligible for the Full Application Form</inlineHelpText>
    <label>Eligible for Full Application</label>
    <type>Checkbox</type>
</CustomField>