force-app/main/default/objects/User/fields/Eligible_for_Full_Award_Setup__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Full_Award_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Full Award Setup</label>
    <type>Checkbox</type>
</CustomField>