force-app/main/default/objects/User/fields/Eligible_for_LCF_Grant__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_LCF_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the user can access the LCF Grants page</description>
    <inlineHelpText>Determines whether the user can access the LCF Grants page</inlineHelpText>
    <label>Eligible for LCF Grant</label>
    <type>Checkbox</type>
</CustomField>