force-app/main/default/objects/User/fields/Eligible_for_NEW_EOI_Form__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_NEW_EOI_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for NEW EOI Form</label>
    <type>Checkbox</type>
</CustomField>