force-app/main/default/objects/User/fields/Enable_Salesforce_Error_Display__c.field-meta.xml
<CustomField>
    <fullName>Enable_Salesforce_Error_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable display of Salesforce error messages on the community error page</inlineHelpText>
    <label>Enable Salesforce Error Display</label>
    <type>Checkbox</type>
</CustomField>